Hard coding schedule. Fastest way to patch

--- a/index.html
+++ b/index.html
@@ -34,14 +34,239 @@
 
 		<div id="wifi" align="center">
 			<br>
-			<h4>WiFi SSID: put-ssid-here</h4>
-			<h4>WiFi Password: put-password-here</h4>
+			<h4>WiFi Login: grizzhacks</h4>
+			<h4>WiFi Password: grizzhacks2018</h4>
 		</div>
 
 		<div id="schedule" class="jumbotron center">
 			<h3>Schedule</h3>
 			<div class="list-group" id="scheduleList">
-			</div>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Sponsor Registration</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 8:30am</p>
+      <p class="mb-1">Ends: Sat 10:30am</p>
+      <p class="mb-1">Location: EC Atrium</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Hacker Registration</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 9:30am</p>
+      <p class="mb-1">Ends: Sat 1:00pm</p>
+      <p class="mb-1">Location: EC Atrium</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Sponsor Expo</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 10:00am</p>
+      <p class="mb-1">Ends: Sat 2:00pm</p>
+      <p class="mb-1">Location: EC Atrium</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Opening Ceremony</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 11:00am</p>
+      <p class="mb-1">Ends: Sat 11:30am</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Team Formation</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 11:30am</p>
+      <p class="mb-1">Ends: Sat 12:00pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Hacking Begins</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 12:00pm</p>
+      <p class="mb-1">Ends: Sun 12:00pm</p>
+      <p class="mb-1">Location: EC Floors 1 &amp; 2</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Structure.sh: Deploying Web Apps to the Cloud</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 12:15pm</p>
+      <p class="mb-1">Ends: Sat 1:00pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Lunch</h5>
+         <small>Food</small>
+      </div>
+      <p class="mb-1">Starts: Sat 1:00pm</p>
+      <p class="mb-1">Ends: Sat 2:30pm</p>
+      <p class="mb-1">Location: In front of EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">ICS: Automotive Hacking & IoT Solved!</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 2:00pm</p>
+      <p class="mb-1">Ends: Sat 3:00pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Ally: Owning DevOps with Org mode</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 3:15pm</p>
+      <p class="mb-1">Ends: Sat 4:15pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Dynatrace: Hands on with Angular, iconic, and Google Cloud Firestore</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 4:30pm</p>
+      <p class="mb-1">Ends: Sat 5:30pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">MLH Cup Stacking</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sat 5:30pm</p>
+      <p class="mb-1">Ends: Sat 6:00pm</p>
+      <p class="mb-1">Location: EC Atrium</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Dinner</h5>
+         <small>Food</small>
+      </div>
+      <p class="mb-1">Starts: Sat 6:00pm</p>
+      <p class="mb-1">Ends: Sat 8:00pm</p>
+      <p class="mb-1">Location: In front of EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+	 <h5 class="mb-1">Adam: Introduction to Android Development</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 6:15pm</p>
+      <p class="mb-1">Ends: Sat 7:15pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+	 <h5 class="mb-1">Code Concert: Writing Live Music with TidalCycles</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 7:30pm</p>
+      <p class="mb-1">Ends: Sat 8:15pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Lyons Talk</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 8:45pm</p>
+      <p class="mb-1">Ends: Sat 9:45pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Steven Kneiser Talk</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 10:00pm</p>
+      <p class="mb-1">Ends: Sat 11:00pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Midnight Snack</h5>
+         <small>Food</small>
+      </div>
+      <p class="mb-1">Starts: Sun 12:00pm</p>
+      <p class="mb-1">Ends: Sun 12:45am</p>
+      <p class="mb-1">Location: TBD</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Showers</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sun 7:00am</p>
+      <p class="mb-1">Ends: Sun 8:00am</p>
+      <p class="mb-1">Location: Rec Center</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Breakfast</h5>
+         <small>Food</small>
+      </div>
+      <p class="mb-1">Starts: Sun 8:00am</p>
+      <p class="mb-1">Ends: Sun 9:30am</p>
+      <p class="mb-1">Location: In front of EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Submit Hacks to Devpost</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sun 9:45am</p>
+      <p class="mb-1">Ends: Sun 10:00am</p>
+      <p class="mb-1">Location: Online</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Hacking Ends</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sun 12:00pm</p>
+      <p class="mb-1">Ends: Sun 12:00pm</p>
+      <p class="mb-1">Location: EC</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Lunch</h5>
+         <small>Food</small>
+      </div>
+      <p class="mb-1">Starts: Sun 12:15pm</p>
+      <p class="mb-1">Ends: Sun 1:00pm</p>
+      <p class="mb-1">Location: In front of EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Demos</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sun 1:00pm</p>
+      <p class="mb-1">Ends: Sun 3:00pm</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Closing Ceremony</h5>
+         <small>Activity</small>
+      </div>
+      <p class="mb-1">Starts: Sun 3:00pm</p>
+      <p class="mb-1">Ends: TBD</p>
+      <p class="mb-1">Location: EC 116</p>
+   </a>
+</div>
 		</div>
 
 		<div id="challenges" class="jumbotron center">
