Fixed slack link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div id="buttons" align="center">
-			<a href="https://grizzhacks3.slack.com/" target="_blank"><button type="button" class="btn btn-outline-success">Request Slack Invite</button></a>
+			<a href="https://joingrizzhacks.herokuapp.com/" target="_blank"><button type="button" class="btn btn-outline-success">Request Slack Invite</button></a>
 			<a href="https://grizzhacks3.devpost.com/" target="_blank"><button type="button" class="btn btn-outline-success">Devpost</button></a>
 			<a href="https://hardware.mlh.io/" target="_blank"><button type="button" class="btn btn-outline-success">MLH Hardware Request</button></a>
 		</div>
