--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<div id="wifi" align="center">
 			<br>
-			<h4>WiFi Login: grizzhacks</h4>
+			<h4>WiFi Login: GRIZZHACKS</h4>
 			<h4>WiFi Password: grizzhacks2018</h4>
 		</div>
 
