tried to update the timer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h1 align="center" class="time" id="countdownTimer">
 				<span id="time">00:00</span>
 				<br>
-				<span id="timerAppendedText" style="font-size: 0.5em;">Hacking Ended!</span>
+				<span id="timerAppendedText" style="font-size: 0.5em;">Wait! Don't start hacking just yet!</span>
 			</h1>
 		</div>
 
@@ -36,7 +36,7 @@
 		<div id="wifi" align="center">
 			<br>
 			<h4>WiFi Login: GRIZZHACKS</h4>
-			<h4>WiFi Password: grizzhacks2018</h4>
+			<h4>WiFi Password: grizzhacks2019</h4>
 		</div>
 
 		<div id="schedule" class="jumbotron center">
