commented id=countdown timer
testing to see how to get the timer to display properly.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</nav>
 
 		<div id="timer">
-			<h1 align="center" class="time" id="countdownTimer">
+			<h1 align="center" class="time" ><!--id="countdownTimer">-->
 				<span id="time">00:00</span>
 				<br>
 				<span id="timerAppendedText" style="font-size: 0.5em;">Wait! Don't start hacking just yet!</span>
