--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<title>GrizzHacks Live</title>
 
-		<link rel="shortcut icon" href="static/images/favicon.png">
+		<link rel="shortcut icon" href="static/images/favicon-2.png">
 
 	</head>
 	<body>
@@ -27,10 +27,11 @@
 		</div>
 
 		<div id="buttons" align="center">
-			<a href="https://grizzhacks3.slack.com" target="_blank"><button type="button" class="btn btn-outline-success">Go To Our Slack</button></a>
-			<a href="https://joingrizzhacks.herokuapp.com/" target="_blank"><button type="button" class="btn btn-outline-success">Request Slack Invite</button></a>
-			<a href="https://grizzhacks3.devpost.com/" target="_blank"><button type="button" class="btn btn-outline-success">Devpost</button></a>
-			<a href="https://hardware.mlh.io/" target="_blank"><button type="button" class="btn btn-outline-success">MLH Hardware Request</button></a>
+			<a href="https://grizzhacks4.slack.com" target="_blank"><button type="button" class="purpleButton" class="btn btn-outline-success">Go To Our Slack</button></a>
+			<a href="http://joingrizzhacks.herokuapp.com/" target="_blank"><button type="button" class="purpleButton" class="btn btn-outline-success">Request Slack Invite</button></a>
+			<a href="https://grizzhacks4.devpost.com/" target="_blank"><button type="button" class="purpleButton" class="btn btn-outline-success">Devpost</button></a>
+         <a href="https://hardware.mlh.io/" target="_blank"><button type="button" class="purpleButton" class="btn btn-outline-success">MLH Hardware Request</button></a>
+         <a href="https://github.com/GrizzHacks/Beginners-Portal" target="_blank"><button type="button" class="purpleButton" class="btn btn-outline-success">Beginners Portal</button></a>
 		</div>
 
 		<div id="wifi" align="center">
@@ -47,8 +48,8 @@
          <h5 class="mb-1">Sponsor Registration</h5>
          <small>Activity</small>
       </div>
-      <p class="mb-1">Starts: Sat 8:30am</p>
-      <p class="mb-1">Ends: Sat 9:00am</p>
+      <p class="mb-1">Starts: Sat 9:00am</p>
+      <p class="mb-1">Ends: Sat 9:30am</p>
       <p class="mb-1">Location: EC Atrium</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -85,7 +86,7 @@
       </div>
       <p class="mb-1">Starts: Sat 11:30am</p>
       <p class="mb-1">Ends: Sat 11:45pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -94,16 +95,25 @@
       </div>
       <p class="mb-1">Starts: Sat 12:00pm</p>
       <p class="mb-1">Ends: Sun 12:00pm</p>
-      <p class="mb-1">Location: EC Floors 1 &amp; 2</p>
+      <p class="mb-1">Location: EC All Floors</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Structure.sh: Deploying Web Apps to the Cloud</h5>
+         <h5 class="mb-1">Andrew Dimmer: Version Control (Github) and Hackathon Project Planning for Beginner and Expert Hackers</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 12:00pm</p>
+      <p class="mb-1">Ends: Sat 1:00pm</p>
+      <p class="mb-1">Location: EC 254</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">MongoDB: IoT with JS (?!?!) - A Gentle Introduction to IoT</h5>
          <small>Tech Talk</small>
       </div>
       <p class="mb-1">Starts: Sat 12:15pm</p>
-      <p class="mb-1">Ends: Sat 1:00pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Ends: Sat 1:15pm</p>
+      <p class="mb-1">Location: EC 281</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -116,34 +126,52 @@
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">ICS: Automotive Hacking & IoT Solved!</h5>
+         <h5 class="mb-1">Red Ventures: Why Theory Matters using Idris</h5>
          <small>Tech Talk</small>
       </div>
       <p class="mb-1">Starts: Sat 2:00pm</p>
-      <p class="mb-1">Ends: Sat 3:00pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Ends: Sat 2:30pm</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Ally: Owning DevOps with Org mode</h5>
+         <h5 class="mb-1">Red Ventures: How to Not Suck as a Team Member</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 2:30pm</p>
+      <p class="mb-1">Ends: Sat 3:00pm</p>
+      <p class="mb-1">Location: EC 254</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">OUCU: APIs: What are They and How to Use Them?</h5>
+         <small>Tech Talk</small>
+      </div>
+      <p class="mb-1">Starts: Sat 2:45pm</p>
+      <p class="mb-1">Ends: Sat 3:15pm</p>
+      <p class="mb-1">Location: EC 281</p>
+   </a>
+   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+         <h5 class="mb-1">Dynatrace: Why UX is Important Through Software Development</h5>
          <small>Tech Talk</small>
       </div>
       <p class="mb-1">Starts: Sat 3:15pm</p>
       <p class="mb-1">Ends: Sat 4:15pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Dynatrace: Hands on with Angular, iconic, and Google Cloud Firestore</h5>
+         <h5 class="mb-1">Little Caesars: IF YOU CAN MEASURE IT YOU CAN MANAGE IT: How Data and Analytics are Driving Today’s Business Decisions.</h5>
          <small>Tech Talk</small>
       </div>
       <p class="mb-1">Starts: Sat 4:30pm</p>
       <p class="mb-1">Ends: Sat 5:30pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">MLH Cup Stacking</h5>
+         <h5 class="mb-1">MLH Event - Werewolf</h5>
          <small>Activity</small>
       </div>
       <p class="mb-1">Starts: Sat 5:30pm</p>
@@ -161,57 +189,39 @@
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-	 <h5 class="mb-1">Adam: Introduction to Android Development</h5>
+	 <h5 class="mb-1">Light Guide Systems: Real-World Challenges Deploying Industrial Augmented Reality Solutions - How to Avoid Becoming the Precipitate</h5>
          <small>Tech Talk</small>
       </div>
-      <p class="mb-1">Starts: Sat 6:15pm</p>
-      <p class="mb-1">Ends: Sat 7:15pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Starts: Sat 7:00pm</p>
+      <p class="mb-1">Ends: Sat 8:00pm</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-	 <h5 class="mb-1">Code Concert: Writing Live Music with TidalCycles</h5>
+	 <h5 class="mb-1">Atomic Object: What do You Want Your Career to do For You?</h5>
          <small>Tech Talk</small>
       </div>
-      <p class="mb-1">Starts: Sat 7:30pm</p>
-      <p class="mb-1">Ends: Sat 8:15pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Starts: Sat 8:15pm</p>
+      <p class="mb-1">Ends: Sat 9:00pm</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Lyons Talk</h5>
+         <h5 class="mb-1">Adam McNeilly: Introduction To Android Development</h5>
          <small>Tech Talk</small>
       </div>
-      <p class="mb-1">Starts: Sat 8:45pm</p>
-      <p class="mb-1">Ends: Sat 9:45pm</p>
-      <p class="mb-1">Location: EC 116</p>
+      <p class="mb-1">Starts: Sat 9:30pm</p>
+      <p class="mb-1">Ends: Sat 10:30pm</p>
+      <p class="mb-1">Location: EC 254</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Steven Kneiser Talk</h5>
-         <small>Tech Talk</small>
-      </div>
-      <p class="mb-1">Starts: Sat 10:00pm</p>
-      <p class="mb-1">Ends: Sat 11:00pm</p>
-      <p class="mb-1">Location: EC 116</p>
-   </a>
-   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Midnight Snack</h5>
+         <h5 class="mb-1">Snack'n'Stack</h5>
          <small>Food</small>
       </div>
-      <p class="mb-1">Starts: Sun 12:00pm</p>
-      <p class="mb-1">Ends: Sun 12:45am</p>
-      <p class="mb-1">Location: TBD</p>
-   </a>
-   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-         <h5 class="mb-1">Showers</h5>
-         <small>Activity</small>
-      </div>
-      <p class="mb-1">Starts: Sun 7:00am</p>
-      <p class="mb-1">Ends: Sun 8:00am</p>
-      <p class="mb-1">Location: Rec Center</p>
+      <p class="mb-1">Starts: Sun 11:15pm</p>
+      <p class="mb-1">Ends: Sun 12:00am</p>
+      <p class="mb-1">Location: EC Attrium</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -227,8 +237,8 @@
          <h5 class="mb-1">Submit Hacks to Devpost</h5>
          <small>Activity</small>
       </div>
-      <p class="mb-1">Starts: Sun 9:45am</p>
-      <p class="mb-1">Ends: Sun 10:00am</p>
+      <p class="mb-1">Starts: Sun 11:00am</p>
+      <p class="mb-1">Ends: Sun 12:00am</p>
       <p class="mb-1">Location: Online</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -238,7 +248,7 @@
       </div>
       <p class="mb-1">Starts: Sun 12:00pm</p>
       <p class="mb-1">Ends: Sun 12:00pm</p>
-      <p class="mb-1">Location: EC</p>
+      <p class="mb-1">Location: EC All Floors</p>
    </a>
    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -264,7 +274,7 @@
          <small>Activity</small>
       </div>
       <p class="mb-1">Starts: Sun 3:00pm</p>
-      <p class="mb-1">Ends: TBD</p>
+      <p class="mb-1">Ends: 4:00</p>
       <p class="mb-1">Location: EC 116</p>
    </a>
 </div>
